PMD(critical) : IntegerInstantiation
Signed-off-by: tesshucom <webmaster@tesshu.com>